--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "require": {
     "php": ">=7.0.0",
     "fideloper/proxy": "~3.3",
+    "intervention/image": "^2.4",
     "laravel/framework": "5.5.*",
     "laravel/tinker": "~1.0"
   },
@@ -27,8 +28,12 @@
     ],
     "psr-4": {
       "App\\": "app/",
-      "Sync\\HasMany\\": "app/src/sync-hasmany"
-    }
+      "Sync\\HasMany\\": "app/src/sync-hasmany",
+      "Uploading\\Image\\": "app/src/uploading-image"
+    },
+    "files": [
+      "app/helpers.php"
+    ]
   },
   "autoload-dev": {
     "psr-4": {
